<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.groupx.quicknews.ArticlesActivity" >
    <item
        android:id="@+id/action_view_history"
        android:title="History"
        android:icon="@drawable/ic_baseline_history_24"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_manage_subscriptions"
        android:title="Manage Subscriptions"
        android:icon="@drawable/ic_baseline_checklist_rtl_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="Logout"/>
</menu>